--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section id="section-1" class="sec-1">
         <header>
-            <div class="logo"><i class="fas fa-graduation-cap"></i>Logo</div>
+            <div class="logo"><i class="fas fa-graduation-cap"></i>School</div>
     
             <div class="navbar">
                 <ul>
